{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 197,
  "lineage": "695fd5bf-b563-b27b-5fe6-09d616135d10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea18256de20ecdfc",
            "arn": "arn:aws:ec2:ca-central-1:977447281500:instance/i-0ede2ac5ed313b814",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ede2ac5ed313b814",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cbd7af49598d9b1c",
            "private_dns": "ip-10-10-1-132.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.132",
            "public_ip": "35.183.15.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd29b9cff871d3aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069619c1e01f626e3",
            "tags": {
              "Name": "Helloworld-1"
            },
            "tags_all": {
              "Name": "Helloworld-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb26cb65b6d78b32"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_http",
            "aws_subnet.central_subnet_1a_public",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea18256de20ecdfc",
            "arn": "arn:aws:ec2:ca-central-1:977447281500:instance/i-0792a29b502d28983",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0792a29b502d28983",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f98ffa10d752f73a",
            "private_dns": "ip-10-10-3-63.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.63",
            "public_ip": "35.183.95.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067b1f07a42745bf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003990feea51a7e0a",
            "tags": {
              "Name": "Helloworld-2"
            },
            "tags_all": {
              "Name": "Helloworld-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb26cb65b6d78b32"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_http",
            "aws_subnet.central_subnet_1b_public",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "central-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:internet-gateway/igw-04e3341ebe67d1fca",
            "id": "igw-04e3341ebe67d1fca",
            "owner_id": "977447281500",
            "tags": {
              "Name": "central-IG"
            },
            "tags_all": {
              "Name": "central-IG"
            },
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "card-web-LB-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:977447281500:loadbalancer/app/card-web-LB-terraform/be5e9d5d4273a142",
            "arn_suffix": "app/card-web-LB-terraform/be5e9d5d4273a142",
            "desync_mitigation_mode": "defensive",
            "dns_name": "card-web-LB-terraform-1760092295.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:977447281500:loadbalancer/app/card-web-LB-terraform/be5e9d5d4273a142",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "card-web-LB-terraform",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bb26cb65b6d78b32"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003990feea51a7e0a"
              },
              {
                "subnet_id": "subnet-069619c1e01f626e3"
              }
            ],
            "subnets": [
              "subnet-003990feea51a7e0a",
              "subnet-069619c1e01f626e3"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0ca305df050570bd7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.ssh_http",
            "aws_subnet.central_subnet_1a_public",
            "aws_subnet.central_subnet_1b_public",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "card-web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:977447281500:listener/app/card-web-LB-terraform/be5e9d5d4273a142/d5d1a3ddab38c4af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:977447281500:targetgroup/card-web-TG-TF/2f4c5865c19ba49d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:977447281500:listener/app/card-web-LB-terraform/be5e9d5d4273a142/d5d1a3ddab38c4af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:977447281500:loadbalancer/app/card-web-LB-terraform/be5e9d5d4273a142",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.card-web-LB-terraform",
            "aws_lb_target_group.card-web-TG-TF",
            "aws_security_group.ssh_http",
            "aws_subnet.central_subnet_1a_public",
            "aws_subnet.central_subnet_1b_public",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "card-web-TG-TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:977447281500:targetgroup/card-web-TG-TF/2f4c5865c19ba49d",
            "arn_suffix": "targetgroup/card-web-TG-TF/2f4c5865c19ba49d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:977447281500:targetgroup/card-web-TG-TF/2f4c5865c19ba49d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-web-TG-TF",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "central_RT_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:route-table/rtb-0c5382e441abbd2aa",
            "id": "rtb-0c5382e441abbd2aa",
            "owner_id": "977447281500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e3341ebe67d1fca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-RT-Private"
            },
            "tags_all": {
              "Name": "central-RT-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.central-IG",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "central_RT_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:route-table/rtb-03a0b02530591f8f6",
            "id": "rtb-03a0b02530591f8f6",
            "owner_id": "977447281500",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e3341ebe67d1fca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "central-RT-Public"
            },
            "tags_all": {
              "Name": "central-RT-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.central-IG",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-asso-1a-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c65fccfececfb90",
            "route_table_id": "rtb-03a0b02530591f8f6",
            "subnet_id": "subnet-069619c1e01f626e3"
          },
          "dependencies": [
            "aws_internet_gateway.central-IG",
            "aws_route_table.central_RT_Public",
            "aws_subnet.central_subnet_1a_public",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-asso-1a-pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065b0ec24e3014a24",
            "route_table_id": "rtb-0c5382e441abbd2aa",
            "subnet_id": "subnet-0ba02ea6622334592"
          },
          "dependencies": [
            "aws_internet_gateway.central-IG",
            "aws_route_table.central_RT_Private",
            "aws_subnet.central_subnet_1a_private",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-asso-1b-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d496ac0e82635199",
            "route_table_id": "rtb-03a0b02530591f8f6",
            "subnet_id": "subnet-003990feea51a7e0a"
          },
          "dependencies": [
            "aws_internet_gateway.central-IG",
            "aws_route_table.central_RT_Public",
            "aws_subnet.central_subnet_1b_public",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-asso-1b-pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025d0b3b0c6fa6931",
            "route_table_id": "rtb-0c5382e441abbd2aa",
            "subnet_id": "subnet-0640f924cf7e06a9a"
          },
          "dependencies": [
            "aws_internet_gateway.central-IG",
            "aws_route_table.central_RT_Private",
            "aws_subnet.central_subnet_1b_private",
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:security-group/sg-0bb26cb65b6d78b32",
            "description": "Allow ssh and http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb26cb65b6d78b32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_http",
            "name_prefix": "",
            "owner_id": "977447281500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_http"
            },
            "tags_all": {
              "Name": "ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "central_subnet_1a_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:subnet/subnet-0ba02ea6622334592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba02ea6622334592",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "977447281500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cental_subnet_1a_private"
            },
            "tags_all": {
              "Name": "cental_subnet_1a_private"
            },
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "central_subnet_1a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:subnet/subnet-069619c1e01f626e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069619c1e01f626e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977447281500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cental_subnet_1a_public"
            },
            "tags_all": {
              "Name": "cental_subnet_1a_public"
            },
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "central_subnet_1b_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:subnet/subnet-0640f924cf7e06a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0640f924cf7e06a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "977447281500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cental_subnet_1b_private"
            },
            "tags_all": {
              "Name": "cental_subnet_1b_private"
            },
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "central_subnet_1b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:subnet/subnet-003990feea51a7e0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003990feea51a7e0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977447281500",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cental_subnet_1b_public"
            },
            "tags_all": {
              "Name": "cental_subnet_1b_public"
            },
            "vpc_id": "vpc-0ca305df050570bd7"
          },
          "dependencies": [
            "aws_vpc.central_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "central_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:977447281500:vpc/vpc-0ca305df050570bd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c565e1bb65859d86",
            "default_route_table_id": "rtb-08bfb8d6aa8828f26",
            "default_security_group_id": "sg-03088108ee6607fc1",
            "dhcp_options_id": "dopt-0b09fa693facd9723",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca305df050570bd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bfb8d6aa8828f26",
            "owner_id": "977447281500",
            "tags": {
              "Name": "Central_vpc"
            },
            "tags_all": {
              "Name": "Central_vpc"
            }
          }
        }
      ]
    }
  ]
}